[package]
name = "cranelift-obj-hello-world"
description = "Cranelift test program that generates an object file for a Hello, World! program"
authors = ["Maow"]
license = "MIT"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
cranelift = "0.85.0"
cranelift-module = "0.85.0"
cranelift-object = "0.85.0"
target-lexicon = "0.12.4"